--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "",
   "license": "ISC",
+  "start":"node app.js",
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.2",
