--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node your-script.js"
   },
   "author": "",
   "license": "ISC",
-  "start":"node app.js",
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.2",
