--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.2",
     "firebase": "^3.4.1",
-    "nodemailer": "^2.6.4"
+    "nodemailer": "^2.6.4",
+    "stripe": "^4.12.0"
   }
 }
